--- a/package.json
+++ b/package.json
@@ -32,17 +32,18 @@
     "react": "16.12.0",
     "react-chartjs-2": "2.9.0",
     "react-copy-to-clipboard": "5.0.2",
+    "react-datepicker": "^2.16.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
+    "react-redux": "^7.1.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.0",
     "reactstrap": "8.4.1",
-    "redux-observable": "^1.2.0",
-    "rxjs": "^6.5.2",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "react-redux": "^7.1.1"
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "@types/googlemaps": "3.39.2",
@@ -51,13 +52,12 @@
     "eslint-plugin-flowtype": "3.13.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "typescript": "3.7.5",
-    "husky": "^4.2.3"
+    "husky": "^4.2.3",
+    "typescript": "3.7.5"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint"
     }
   }
-  
 }
