--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.0",
+    "react-toastify": "^6.0.4",
     "reactstrap": "8.4.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
