--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.8.1",
     "@fortawesome/fontawesome-free": "5.12.1",
     "chart.js": "2.9.3",
     "classnames": "2.2.6",
