--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartjs-2": "2.9.0",
     "react-copy-to-clipboard": "5.0.2",
     "react-datepicker": "^2.16.0",
