--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.0",
